outputs.OLD/production-metadata/HEAL-33364/unpackaged/unpackaged/objects/Order.object
<CustomObject>
    <fields>
        <fullName>AVA_SFCLOUD__AvaTax_Doc_Status__c</fullName>
        <description>Temporary = Not Saved to Avalara AvaTax
Saved = Saved but not Posted/Committed to Avalara AvaTax
Committed = Saved and Committed to Avalara AvaTax</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Temporary = Not Saved to Avalara AvaTax
Saved = Saved but not Posted/Committed to Avalara AvaTax
Committed = Saved and Committed to Avalara AvaTax
(Do not edit this field value)</inlineHelpText>
        <label>AvaTax Doc Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__AvaTax_Message__c</fullName>
        <description>Displays AvaTax responses or messages.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays AvaTax responses or messages.</inlineHelpText>
        <label>AvaTax Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Calculate_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers AvaTax to show the calculated tax.</description>
        <inlineHelpText>Triggers AvaTax to show the calculated tax.</inlineHelpText>
        <label>Calculate Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Commit_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, performs the automatic tax calculation and passes the document as &quot;Committed&quot; on the AvaTax.</description>
        <inlineHelpText>If checked, performs the automatic tax calculation and passes the document as &quot;Committed&quot; on the AvaTax.</inlineHelpText>
        <label>Commit Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Cross_Border_Summary_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The resulting tax calculation response message indicating de minimus, source rules, and etc.</inlineHelpText>
        <label>Cross Border Summary Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Entity_Use_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Entity use codes indicate the reason for exemption.</description>
        <inlineHelpText>Entity use codes indicate the reason for exemption.</inlineHelpText>
        <label>Entity/Use Code</label>
        <referenceTo>AVA_MAPPER__Entity_Use_code__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Import_Fees__c</fullName>
        <inlineHelpText>The calculated customs duty and import fee for this transaction.</inlineHelpText>
        <label>Import Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Invoice_Message__c</fullName>
        <description>This field is used to display the invoicing messages for VAT functionality.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to display the invoicing messages for VAT functionality.</inlineHelpText>
        <label>Invoice Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Is_Seller_Importer_Of_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Seller is responsible for any import taxes and fees</description>
        <inlineHelpText>If checked, Seller is responsible for any import taxes and fees</inlineHelpText>
        <label>Is Seller Importer Of Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Origin_City__c</fullName>
        <description>Enter the city of your order.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the city of your order.</inlineHelpText>
        <label>Origin City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Origin_Country__c</fullName>
        <description>Enter the country of your order.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the country of your order.</inlineHelpText>
        <label>Origin Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Origin_Postal_Code__c</fullName>
        <description>Enter the zip/postal code of your order.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the zip/postal code of your order.</inlineHelpText>
        <label>Origin Zip/Postal Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Origin_State__c</fullName>
        <description>Enter the state/province of your order.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the state/province of your order.</inlineHelpText>
        <label>Origin State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Origin_Street__c</fullName>
        <description>Enter the street of your order.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the street of your order.</inlineHelpText>
        <label>Origin Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Sales_Tax__c</fullName>
        <description>Displays the tax amount calculated by AvaTax.</description>
        <inlineHelpText>Displays the tax amount calculated by AvaTax.</inlineHelpText>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__ShippingHandling_Tax__c</fullName>
        <description>Displays the Sales Tax calculated for Shipping and Handling.</description>
        <inlineHelpText>Displays the Sales Tax calculated for Shipping and Handling.</inlineHelpText>
        <label>Shipping and Handling Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__ShippingHandling__c</fullName>
        <description>Enter the amount for the Shipping and Handling.</description>
        <inlineHelpText>Enter the amount for the Shipping and Handling.</inlineHelpText>
        <label>Shipping and Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Shipping_Method__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Utilize this field to define the shipping mode in which the individual line item or transaction is being used. Cross Border tax calculation must be enabled in the configurations.</inlineHelpText>
        <label>Shipping Method</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Tax_Date__c</fullName>
        <description>This field determines the tax calculation date for the Orders. If left blank, will be the same as the Order Date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field determines the tax calculation date for the Orders. If left blank, will be the same as the Order Date.</inlineHelpText>
        <label>Tax Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Transport__c</fullName>
        <inlineHelpText>This specifies who is responsible for transport of the goods on the transaction</inlineHelpText>
        <label>Transport</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AVA_SFCLOUD__Avalara_Transport</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Note__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Accounting Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor__c</fullName>
        <formula>Opportunity.Owner.FirstName + Opportunity.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DEA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfilled_By__c</fullName>
        <description>Filled in by automation depending on the products added to the order.</description>
        <label>Fulfilled By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fulfillment_Companies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generate__c</fullName>
        <label>Generate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>PurchaseOrder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <formula>Opportunity.Invoice_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Practitioner__c</fullName>
        <formula>Account.Main_Practitioner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Practitioner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_License_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NPI License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_SF_Order_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old SF Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partial_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partial By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_D_L__c</fullName>
        <formula>Account.PersonContact.Account.Driver_s_License__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Driver&apos;s License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Date_Of_Birth__c</fullName>
        <formula>Account.DateOfBirth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient D.O.B</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Email__c</fullName>
        <formula>Account.PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Mobile__c</fullName>
        <formula>Account.PersonContact.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Phone__c</fullName>
        <formula>Account.PersonContact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Order_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharmacy Order Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Practitioner_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Practitioner_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_Website__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Practitioner_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_count__c</fullName>
        <label>Product count</label>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QB_Error__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QB Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quickbooks_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reconciled_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reconciled By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reconciled_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reconciled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reconciled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconciled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Service__c</fullName>
        <inlineHelpText>The standard is a 3 – 4 business day, Economy is a 5 – 8 business day, Expedited is 2 – 3 day, 2DA is 2 day air, NDA is Next day air</inlineHelpText>
        <label>Requested Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Economy</fullName>
                </value>
                <value>
                    <fullName>Expedited</fullName>
                </value>
                <value>
                    <fullName>2DA</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipped_Date__c</fullName>
        <formula>Opportunity.First_Shipping_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping City</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signing_Practitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signing Practitioner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Affiliate Doctor Account Record Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_License_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_s_Where_Practitioner_Is_Licensed__c</fullName>
        <label>State(s) Where Practitioner Is Licensed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>States_Where_Practitioner_Is_Licensed__c</fullName>
        <label>States Where Practitioner Is Licensed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Quantity_of_Products__c</fullName>
        <label>Total Quantity of Products</label>
        <summarizedField>OrderItem.Quantity</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Use_Main_Practitioner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Main Practitioner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Signing_Practitioner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Signing Practitioner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Vendor_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Vendor Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2 OR 3) AND (4 OR 5)</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Lab Account Record Type</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Affiliate Doctor Account Record Type</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Pharmacy Account Record Type</value>
            </filterItems>
            <filterItems>
                <field>Account.Company_Legal_Name__c</field>
                <operation>notEqual</operation>
                <value>HealthGAINS</value>
            </filterItems>
            <filterItems>
                <field>Account.Company_Legal_Name__c</field>
                <operation>notEqual</operation>
                <value>Healthgains</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Vendor)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Vendor_Price_Book_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Price Book ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Website__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Vendor_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sstation__Additional_Cost__c</fullName>
        <label>Additional Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sstation__Estimated_Confirmation__c</fullName>
        <label>Estimated Confirmation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sstation__Estimated_Shipping__c</fullName>
        <label>Estimated Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sstation__Fullfillment_Status__c</fullName>
        <label>Fullfillment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PartiallyFulfilled</fullName>
                </value>
                <value>
                    <fullName>Unfulfilled</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>OnHoldPerMarketplace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sstation__Insurance_Cost__c</fullName>
        <label>Insurance Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sstation__Insurance_Paid__c</fullName>
        <label>Insurance Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sstation__Insured_Value__c</fullName>
        <label>Insured Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sstation__Shipment_Preferences__c</fullName>
        <label>Shipment Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BillDutiesToSender</fullName>
                </value>
                <value>
                    <fullName>Confirmation</fullName>
                </value>
                <value>
                    <fullName>DeclaredInsurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sstation__Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Affiliated_Doctors_Orders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <columns>Vendor_Name__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>Partial__c</columns>
        <columns>Partial_Date__c</columns>
        <columns>Partial_By__c</columns>
        <columns>Accounting_Note__c</columns>
        <columns>Reconciled__c</columns>
        <columns>ORDERS.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Affiliate_Doctor_Account_Record_Type</value>
        </filters>
        <filters>
            <field>Reconciled__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Shipped_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Affiliated Doctors Orders</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <columns>Vendor_Name__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>Partial__c</columns>
        <columns>Partial_By__c</columns>
        <columns>Accounting_Note__c</columns>
        <columns>Partial_Date__c</columns>
        <columns>Reconciled__c</columns>
        <columns>ORDERS.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <columns>Vendor_Name__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>Partial__c</columns>
        <columns>Partial_Date__c</columns>
        <columns>Partial_By__c</columns>
        <columns>Accounting_Note__c</columns>
        <columns>Reconciled__c</columns>
        <columns>Reconciled_By__c</columns>
        <columns>Reconciled_Date__c</columns>
        <columns>ORDERS.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <columns>Vendor_Name__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>Partial__c</columns>
        <columns>Partial_By__c</columns>
        <columns>Accounting_Note__c</columns>
        <columns>Reconciled__c</columns>
        <columns>Reconciled_Date__c</columns>
        <columns>Reconciled_By__c</columns>
        <columns>Partial_Date__c</columns>
        <columns>ORDERS.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
        <sharedTo>
            <roleAndSubordinates>CFO_New</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>